Fixed dark mode.

--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -38,6 +38,9 @@ div.CodeMirror span.CodeMirror-matchingbracket { border-bottom: 2px solid blue; 
 .CodeMirror-dialog { padding: 2px 10px; color: gray; }
 .CodeMirror-dialog input { font-weight: bold; font-family: Menlo,Consolas; color: black; }
 
+.td .CodeMirror-dialog { color: #A0A0A0; border-bottom-color: #404040; box-shadow: 0 2px 3px rgba(0,0,0,0.05); }
+.td .CodeMirror-dialog input { color: white; }
+
 .cm-tab { background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAADAAAAAMCAYAAAAkuj5RAAAAKElEQVRIiWNgGAWjYBQMacDIwMBgzMDAcBZKw8BQ4I+CUTAKRsEgAAAA4AwCz6/F0QAAAABJRU5ErkJggg==) no-repeat 100% 50%; }
 .CodeMirror-ruler { border-color: #E0E0E0; }
 
